<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/filter_action"
        android:icon="@drawable/ic_filter_list_white_24dp"
        android:title="@string/filter"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/sort_action"
        android:icon="@drawable/ic_sort_by_alpha_black_24dp"
        android:title="@string/sort"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/toggle_list_mode_action"
        android:icon="@drawable/ic_view_list_black_24dp"
        android:title="@string/toggle_list_mode"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/settings_action"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/about_action"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>
