<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <CheckBox
        android:id="@+id/only_keep_imported_ids_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/colorAccent"
        android:text="@string/only_keep_imported_ids"
        android:textColor="@color/primaryTextColor"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/owned_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/colorAccent"
        android:text="@string/owned"
        android:textColor="@color/primaryTextColor"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/previously_owned_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/colorAccent"
        android:text="@string/previously_owned"
        android:textColor="@color/primaryTextColor"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/for_trade_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/colorAccent"
        android:text="@string/for_trade"
        android:textColor="@color/primaryTextColor"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/want_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/colorAccent"
        android:text="@string/want"
        android:textColor="@color/primaryTextColor"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/want_to_play_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/colorAccent"
        android:text="@string/want_to_play"
        android:textColor="@color/primaryTextColor"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/want_to_buy_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/colorAccent"
        android:text="@string/want_to_buy"
        android:textColor="@color/primaryTextColor"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/preordered_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/colorAccent"
        android:text="@string/pre_ordered"
        android:textColor="@color/primaryTextColor"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/wish_list_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/colorAccent"
        android:text="@string/wishlist"
        android:textColor="@color/primaryTextColor"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/boardgamegeek_username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@color/primaryTextColor"
        android:textColorHint="@color/secondaryTextColor" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/import_collection_cancel"
            style="@style/FlatButtonNoAccent"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/import_collection_ok"
            style="@style/FlatButtonNoAccent"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/import_title"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/import_collection"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>