<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/secondaryBackgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/update_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/primaryTextColor"
            tools:text="@string/app_updated"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/primaryTextColor"
            android:text="@string/changelog_1_2_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/primaryTextColor"
            android:textSize="14sp"
            android:text="@string/changelog_1_2_description"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:textColor="@color/primaryTextColor"
            android:text="@string/changelog_1_1_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/primaryTextColor"
            android:textSize="14sp"
            android:text="@string/changelog_1_1_description"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:textColor="@color/primaryTextColor"
            android:text="@string/changelog_1_0_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/primaryTextColor"
            android:textSize="14sp"
            android:text="@string/changelog_1_0_description"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>