<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroundColor"
            android:padding="16dp"
            android:clickable="true"
            android:focusable="true"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/general"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/rating_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/average_title"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/selected_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="14sp"
                    tools:text="@string/user_average_0_votes"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/filter_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/selected_filter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_games_shown"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sort_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sort"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/selected_sort"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="14sp"
                    tools:text="@string/sort_games_by"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/clear_history_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_search_history_title"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_search_history_description"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/clear_cache_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_cache_title"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_cache_description"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/top_category_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/top_games_category"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/top_category_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="14sp"
                    tools:text="Show best rated all time boardgames" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/customize_ui_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_interface_title"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_interface_description"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="14sp" />

            </LinearLayout>

            <View style="@style/Divider"
                android:layout_marginStart="-16dp"
                android:layout_marginEnd="-16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/youtube_channel_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/youtube_channel"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/selected_youtube_channel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/showing_videos_from"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/open_in_youtube_title"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/open_in_youtube_description"
                        android:textColor="@color/secondaryTextColor"
                        android:textSize="14sp" />

                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/open_in_youtube_switch"
                    style="@style/SwitchCompatStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/autoplay_videos_title"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/autoplay_videos_description"
                        android:textColor="@color/secondaryTextColor"
                        android:textSize="14sp" />

                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/autoplay_switch"
                    style="@style/SwitchCompatStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>