<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/weight"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/complexity_description" />

    <TextView
        android:id="@+id/boardgame_geek_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/property_boardgamegeek_link"/>

</LinearLayout>